Am able to get a capture with this change. Not entirely sure what did it, but it may just be that i destroyed various vulkan objects, perhaps letting renderdoc understand the lifetime of certain objects better, thus enabling a capture

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,8 +59,7 @@ add_dependencies(StudyingVulkan volk)
 target_link_libraries(StudyingVulkan assimp)
 target_link_libraries(StudyingVulkan volk)
 
-FetchContent_MakeAvailable( assimp 
-                            volk )
+FetchContent_MakeAvailable( assimp volk )
 
 # Include sub-projects.
 add_subdirectory ("${EXTERNAL_LIBRARIES_DIRECTORY}")
