re-added code to enable use of a vertex buffer. It still doesnt load geometry from a file yet though.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,16 +23,27 @@ add_executable (StudyingVulkan "Source/AppWindowingSystem.cpp"
                                "Source/Vulkan_Utils.h"
                                "Source/Vulkan_enum_strings.h"
                                "Source/WinResources.rc"
-                               "Source/resource.h")
+                               "Source/resource.h"
+                               "Source/Vulkan_Buffer_tools.h"
+                               "Source/Vulkan_Buffer_Tools.cpp"
+                               "Source/Asset_Tools.h"
+                               "Source/Asset_Tools.cpp")
 
 set_property(TARGET StudyingVulkan PROPERTY CXX_STANDARD 17)
 
 # Variables for local use
+set (LIB_GLM_NAME    "glm"   )
 set (LIB_ASSIMP_NAME "assimp")
-set (LIB_VOLK_NAME    "volk" )
+set (LIB_VOLK_NAME   "volk"  )
 set (EXTERNAL_LIBRARIES_DIRECTORY "${CMAKE_HOME_DIRECTORY}/3rdPartyLibraries")
 
 include(FetchContent)
+FetchContent_Declare(glm
+                     GIT_REPOSITORY https://github.com/g-truc/glm.git
+                     GIT_TAG efec5db081e3aad807d0731e172ac597f6a39447
+                     SOURCE_DIR "${EXTERNAL_LIBRARIES_DIRECTORY}/${LIB_GLM_NAME}")
+
+
 FetchContent_Declare(assimp
                      GIT_REPOSITORY https://github.com/assimp/assimp.git
                      GIT_TAG 45946ec01bc2f4678ba62c9151f3f916842e1fc5
@@ -46,10 +57,11 @@ FetchContent_Declare(volk
 
 option( ASSIMP_INSTALL           ""  OFF )
 option( ASSIMP_BUILD_TESTS       ""  OFF )
-option( BUILD_SHARED_LIBS        ""  OFF ) #: Generation of shared libs (dll for windows, so for Linux). Set this to OFF to get a static lib.
+option( BUILD_SHARED_LIBS        ""  OFF ) #: Generation of shared libs (dll for windows, .so for Linux). Set this to OFF to get a static lib.
 option( ASSIMP_BUILD_ASSIMP_VIEW ""  OFF )
 option( ASSIMP_NO_EXPORT         ""  ON  )
 
+target_include_directories(StudyingVulkan PUBLIC "${EXTERNAL_LIBRARIES_DIRECTORY}/${LIB_GLM_NAME}" )
 target_include_directories(StudyingVulkan PUBLIC "${EXTERNAL_LIBRARIES_DIRECTORY}/${LIB_ASSIMP_NAME}" )
 target_include_directories(StudyingVulkan PUBLIC "${EXTERNAL_LIBRARIES_DIRECTORY}/${LIB_VOLK_NAME}" )
 
@@ -59,7 +71,7 @@ add_dependencies(StudyingVulkan volk)
 target_link_libraries(StudyingVulkan assimp)
 target_link_libraries(StudyingVulkan volk)
 
-FetchContent_MakeAvailable( assimp volk )
+FetchContent_MakeAvailable( assimp volk glm)
 
 # Include sub-projects.
 add_subdirectory ("${EXTERNAL_LIBRARIES_DIRECTORY}")
