Added code so that when the escape key is pressed, the program ends. Also removed a bunch of unused code. Also added cmake option that controls the value of the DEBUG_PRINTS_ENABLE.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,18 @@ set(VERSION_MAJOR 0)
 set(VERSION_MINOR 1)
 SET(VERSION_PATCH 0)
 
+option(RUNTIME_DEBUG_PRINTS_ENABLE OFF)
+
 set(SHADERS_ROOT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Source/Shaders")
 set(ASSETS_DIRECTORY       "${CMAKE_CURRENT_SOURCE_DIR}/Assets")
+
+
+if(RUNTIME_DEBUG_PRINTS_ENABLE)
+     set(DEBUG_PRINTS_ENABLE 1)
+else()
+    set(DEBUG_PRINTS_ENABLE 0)
+endif()
+
 
 configure_file(Source/config.h.in ${CMAKE_CURRENT_SOURCE_DIR}/Source/config.h @ONLY)
 
