--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,11 +30,17 @@ add_executable (StudyingVulkan "Source/AppWindowingSystem.cpp"
 set_property(TARGET StudyingVulkan PROPERTY CXX_STANDARD 17)
 
 # Variables for local use
+set (LIB_GLM_NAME    "glm"   )
 set (LIB_ASSIMP_NAME "assimp")
 set (LIB_VOLK_NAME    "volk" )
 set (EXTERNAL_LIBRARIES_DIRECTORY "${CMAKE_HOME_DIRECTORY}/3rdPartyLibraries")
 
 include(FetchContent)
+FetchContent_Declare(glm
+                     GIT_REPOSITORY https://github.com/g-truc/glm.git
+                     GIT_TAG efec5db081e3aad807d0731e172ac597f6a39447
+                     SOURCE_DIR "${EXTERNAL_LIBRARIES_DIRECTORY}/${LIB_GLM_NAME}")
+
 FetchContent_Declare(assimp
                      GIT_REPOSITORY https://github.com/assimp/assimp.git
                      GIT_TAG 45946ec01bc2f4678ba62c9151f3f916842e1fc5
